--- a/index.html
+++ b/index.html
@@ -1,24 +1,39 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Retreaver Checker</title>
+    <meta charset="UTF-8">
+    <title>Retreaver RTB Ping Tool</title>
+    <style>
+        body { font-family: sans-serif; padding: 40px; background: #f4f7f6; }
+        .card { background: white; padding: 20px; border-radius: 8px; box-shadow: 0 2px 10px rgba(0,0,0,0.1); max-width: 500px; margin: auto; }
+        input { width: 100%; padding: 10px; margin: 10px 0; border: 1px solid #ddd; border-radius: 4px; box-sizing: border-box; }
+        button { width: 100%; padding: 10px; background: #2ecc71; color: white; border: none; border-radius: 4px; cursor: pointer; font-weight: bold; }
+        #result { margin-top: 20px; padding: 15px; background: #333; color: #0f0; border-radius: 4px; font-family: monospace; font-size: 12px; white-space: pre-wrap; display: none; }
+    </style>
 </head>
 <body>
-  <h2>Retreaver API Lookup</h2>
+    <div class="card">
+        <h2>Retreaver Ping Test</h2>
+        <input type="text" id="phone" placeholder="Enter Caller Number (e.g. +1234567890)">
+        <button onclick="firePing()">Fire RTB Ping</button>
+        <div id="result"></div>
+    </div>
 
-  <input id="caller" placeholder="Enter caller number" />
-  <button onclick="check()">Check</button>
+    <script>
+        async function firePing() {
+            const num = document.getElementById('phone').value;
+            const resDiv = document.getElementById('result');
+            resDiv.style.display = "block";
+            resDiv.innerText = "Pinging...";
 
-  <pre id="output"></pre>
-
-  <script>
-    async function check() {
-      const number = document.getElementById("caller").value;
-      const res = await fetch(`/check?caller_number=${number}`);
-      const data = await res.text();
-      document.getElementById("output").textContent = data;
-    }
-  </script>
+            try {
+                const response = await fetch(`/api/ping?caller_number=${encodeURIComponent(num)}`);
+                const data = await response.json();
+                resDiv.innerText = JSON.stringify(data, null, 2);
+            } catch (err) {
+                resDiv.innerText = "Error: " + err.message;
+            }
+        }
+    </script>
 </body>
 </html>
